// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reconcile() is able to handle the annotations 1`] = `
{
  "countries": [
    "Bahamas",
    "Nepal",
    "Samoa",
  ],
  "country": "Nigeria",
}
`;

exports[`reconcile() is able to handle the annotations 2`] = `
{
  "countries": [
    "Bahamas",
    "Nepal",
    "Samoa",
  ],
  "countries.0": "Bahamas",
  "countries.1": Annotation {
    "operations": [
      {
        "operation": 1,
        "process": Symbol(process),
      },
    ],
    "value": "Nepal",
  },
  "countries.2": "Samoa",
  "country": Annotation {
    "operations": [
      {
        "operation": 1,
        "process": Symbol(process),
      },
    ],
    "value": "Nigeria",
  },
}
`;

exports[`reconcile() is able to handle the annotations 3`] = `
{
  "countries": [
    "Bahamas",
    "Nepal",
    "Samoa",
    "Bonaire, Sint Eustatius and Saba",
  ],
  "country": "Venezuela",
}
`;

exports[`reconcile() is able to handle the annotations 4`] = `
{
  "countries": [
    "Bahamas",
    "Nepal",
    "Samoa",
    "Bonaire, Sint Eustatius and Saba",
  ],
  "countries.0": "Bahamas",
  "countries.1": Annotation {
    "operations": [
      {
        "operation": 4,
        "process": Symbol(process),
      },
      {
        "operation": 1,
        "process": Symbol(process),
      },
    ],
    "value": "Nepal",
  },
  "countries.2": "Samoa",
  "countries.3": "Bonaire, Sint Eustatius and Saba",
  "country": Annotation {
    "operations": [
      {
        "operation": 1,
        "process": Symbol(process),
      },
    ],
    "value": "Venezuela",
  },
}
`;
